# tauri-plugin-glazier

./: .gitignore  Cargo.toml  README.md  api-iife.js  build.rs  package.json  tsconfig.json
examples/tauri-app/: package.json  vite.config.ts
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs  main.rs
examples/tauri-app/src/routes/: +page.svelte
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  lib.rs
src/linux/: commands.rs
src/windows/: commands.rs  mod.rs
