[package]
name = "tauri-plugin-glazier"
version = "0.0.1"
description = "Window tiling for Tauri Apps with unified cross-platform functionality"
authors = ["Andre Roelofs"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"
links = "tauri-plugin-glazier"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
focus-tracker = "1"
serde_json = "1"
thiserror = "2"
log = "0.4"
