[package]
name = "tauri-app-example"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "tauri_app_example_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-glazier = { path = "../../.." }
